--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
         <section class="container-left">
             <h1>Easy Shopping Via Mobile</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                reprehenderit ad odit soluta maxime molestias aspernatur rem, adipisci
-                facere libero at deserunt voluptates explicabo sit? Quidem minima eos
-                labore expedita.
+                Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Donec lorem justo, sollicitudin vel ultricies sed,
+                eleifend nec metus. Etiam vitae pellentesque dolor.
             </p>
             <button>Get Started</button>
         </section>
 
         <section class="container-right">
             <header>
-                <a class="link-header">Home</a>
-                <a class="link-header">Work</a>
-                <a class="link-header">About</a>
-                <a class="link-header">Contact</a>
+                <a class="link-header" href="#">Home</a>
+                <a class="link-header" href="#">Work</a>
+                <a class="link-header" href="#">About</a>
+                <a class="link-header" href="#">Contact</a>
             </header>
             <img class="illustration" src="./assests/Illustration-3-3.png"
                 alt="Figura de uma mulher navegando no site Easy Shopping pelo celular" />
